Update .gitignore to include environment variables and remove unused services from compose.yaml. Adjusted pipeline port mapping and cleaned up volume definitions.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,5 @@
 # Docker Compose file for AI Stack
 
-
 services:
   ollama:
     image: ollama/ollama:latest
@@ -9,7 +8,6 @@ services:
     environment:
       - PUID=${PUID:-1000}
       - PGID=${PGID:-1000}
-      - OLLAMA_KEEP_ALIVE=1h
       - ENABLE_IMAGE_GENERATION=True
       - COMFYUI_BASE_URL=http://stable-diffusion-webui:7860
     networks:
@@ -94,79 +92,11 @@ services:
     ports:
       - "27017:27017"
 
-  translate:
-    container_name: whisper-libretranslate
-    image: libretranslate/libretranslate:latest-cuda
-    env_file:
-      - .env
-    networks:
-      - ai-stack
-    restart: unless-stopped
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
-      - libretranslate_data:/home/libretranslate/.local/share
-      - libretranslate_cache:/home/libretranslate/.local/cache
-    user: root
-    tty: true
-    environment:
-      - PUID=${PUID:-1000}
-      - PGID=${PGID:-1000}
-      - LT_DISABLE_WEB_UI=True
-      - LT_LOAD_ONLY=${LT_LOAD_ONLY:-en,fr,es}
-      - LT_UPDATE_MODELS=True
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
-    ports:
-      - "5000:5000"
-
-  whisper:
-    container_name: whisper
-    pull_policy: always
-    image: pluja/whishper:latest-gpu
-    env_file:
-      - .env
-    networks:
-      - ai-stack
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
-      - whisper_uploads:/app/uploads
-      - whisper_logs:/var/log/whishper
-      - whisper_models:/app/models
-    restart: unless-stopped
-    depends_on:
-      - mongo
-      - translate
-    environment:
-      - PUID=${PUID:-1000}
-      - PGID=${PGID:-1000}
-      - PUBLIC_INTERNAL_API_HOST=${WHISHPER_HOST}
-      - PUBLIC_TRANSLATION_API_HOST=${WHISHPER_HOST}
-      - PUBLIC_API_HOST=${WHISHPER_HOST:-}
-      - PUBLIC_WHISHPER_PROFILE=gpu
-      - WHISPER_MODELS_DIR=/app/models
-      - UPLOAD_DIR=/app/uploads
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
-    ports:
-      - "8000:80"
-      
   pipelines:
     image: ghcr.io/open-webui/pipelines:main
     restart: always
     ports:
-      - "9099:9099"
+      - "9098:9098"
     environment:
       PIPELINES_URLS: "https://github.com/open-webui/pipelines/blob/main/examples/filters/detoxify_filter_pipeline.py"
       PUID: 1000
@@ -177,6 +107,7 @@ services:
       - ai-stack
     depends_on:
       - open-webui
+
 networks:
   ai-stack:
     external: true
@@ -187,8 +118,4 @@ volumes:
   searxng_data:
   mongo_data:
   mongo_logs:
-  libretranslate_data:
-  libretranslate_cache:
-  whisper_uploads:
-  whisper_logs:
-  whisper_models:
+  pipelines:
